# Invocation

./: Makefile  Makefile.in  README.md  appdb.c  appdb.h  auth.c  auth.h  book_inout.c  book_inout.h  client.c  common.c  common.h  config.status  configure  configure.ac  grant  grant.c  invoke  invoke.conf  invoked  peer.c  peer.h  server.c
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libUseful-4/: DataParser.c  DataParser.h  Makefile  Stream.c  config.status
libUseful-4/autom4te.cache/: output.1  requests  traces.0  traces.1
